# 16Games-in-Cpp

./: .gitignore  .last_modified  CMakeLists.txt  COMO_TESTAR.md  Makefile  README.md  fix_games.sh  pdfSourceGC.html  setup.sh  test_games.sh
.github/workflows/: build-docs.yaml
02  Doodle Jump/: main.cpp
03  Arkanoid/: main.cpp
04 Snake/: main.cpp
05 Minesweeper/: main.cpp
06 Fifteen-Puzzle/: main.cpp
07 Racing (Top Down)/: main.cpp
08 Outrun/: main.cpp
09 Xonix/: main.cpp
10 Bejeweled/: main.cpp
11 NetWalk (Pipe Puzzle)/: main.cpp
12 Mahjong Solitaire/: main.cpp
12 Mahjong Solitaire/files/: map2.txt  map3.txt
13 Tron/: main.cpp  server.cpp
14 Chess/: Connector.hpp  main.cpp
15 Volleyball/: main.cpp
16 Asteroids/: main.cpp
Writerside/: gc.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: Tron.md  arkanoid.md  build-and-run.md  build-and-run.topic  cmake-installation.md  compilacao.md  compilation-guide.md  compilation-guide.topic  configuracao-ambiente.md  doodle-jump.md  environment-setup.md  environment-setup.topic  estrutura-projeto.md  fifteen-puzzle.md  games-documentation.topic  ide-setup.md  ide-setup.topic  inicio.md  jogos.md  mahjong.md  minesweeper.md  netwalk.md  outrun.md  racing.md  running-games.md  running-games.topic  sfml-installation.md  sfml-installation.topic  snake.md  starter-topic.md  system-requirements.md  system-requirements.topic  tetris.md  troubleshooting-setup.md  troubleshooting-setup.topic  xonix.md
Writerside/topics/10 Bejeweled/: bejeweled.md
docs/: HelpTOC.json  Map.jhm  arkanoid.html  bejeweled.html  build-and-run.html  cmake-installation.html  compilacao.html  compilation-guide.html  config.json  configuracao-ambiente.html  doodle-jump.html  environment-setup.html  estrutura-projeto.html  fifteen-puzzle.html  ide-setup.html  index.html  inicio.html  jogos.html  llms.txt  mahjong.html  minesweeper.html  netwalk.html  outrun.html  racing.html  running-games.html  sfml-installation.html  sitemap.xml  snake.html  system-requirements.html  tetris.html  troubleshooting-setup.html  xonix.html
